[package]
name = "p1_reader"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
regex = "1.5.4"
actix-web = "3.3.2"
actix-cors = "0.5.4"
lazy_static = "1.4.0"
prometheus = "0.12.0"
