[package]
name = "p1_reader"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2021"

[dependencies]
serialport = "4.2"
regex = "1.5"
actix-web = "4"
actix-cors = "0.6"
lazy_static = "1.4"
prometheus = "0.13"

[dependencies.clap]
version = "3.2.6"
features = ["derive"]